@@ -1,8 +1,9 @@
 mirror-doors    # Mac OS X
-cf-x86          # Linux amd64
+cf-x86          # GNU/Linux amd64
 openbsd-i386    # OpenBSD i386
 solaris-x86     # Solaris i386
 dev             # Solaris sparc
 freebsd-i386    # FreeBSD i386
 netbsd-i386     # NetBSD i386
 mypants         # NetBSD sparc64
+derna           # GNU/Linux i386
