@@ -1,8 +1,10 @@
 include ../packages.mk
 
-PACKAGE=scons
+PACKAGE=dos2unix
 
-VERSION=2.0.1
+VERSION=5.3.1
+
+AUTOMAKE_DIR=$(PACKAGE)-$(VERSION)
 
 .PHONY: all
 all: $(PACKAGE)-install.tag clean
@@ -14,10 +16,13 @@ $(PACKAGE)-unpack.tag: download/$(PACKAGE)-$(VERSION).tar.gz
 	tar xzvf download/$(PACKAGE)-$(VERSION).tar.gz
 	touch $@
 
-$(PACKAGE)-install.tag: $(PACKAGE)-unpack.tag
-	cd $(PACKAGE)-$(VERSION) && \
-	python setup.py install --prefix=$(LOCAL_DIR)
+$(PACKAGE)-make.tag: $(PACKAGE)-unpack.tag
+	$(MAKE) -C $(AUTOMAKE_DIR)
+	touch $@
+
+$(PACKAGE)-install.tag: $(PACKAGE)-make.tag
+	$(MAKE) -C $(AUTOMAKE_DIR) install  prefix=$(LOCAL_DIR)
 	touch $@
 
 clean:
-	rm -rf $(PACKAGE)-$(VERSION) download/* *.tag
+	rm -rf $(AUTOMAKE_DIR) download/* *.tag
